<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kioskappplogikaa.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOpenListOfFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GET STARTED"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/title"
            app:layout_constraintBottom_toTopOf="@id/btStartLockTask"
            app:layout_constraintEnd_toEndOf="@id/btStopLockTask"
            app:layout_constraintStart_toStartOf="@id/btStartLockTask" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btStartLockTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_lock_task"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btStopLockTask" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btStopLockTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_lock_task"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btStartLockTask"
            app:layout_constraintRight_toRightOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstLayoutInternetConnectContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ED000000"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mainRotatingCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/internet_conn_circle"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainNoInternetMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainRotatingCircle"
                android:layout_marginTop="12dp"
                android:text="No internet connection"
                android:textColor="#5E5E5E"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainRotatingCircle" />

            <!-- Add other UI elements as needed -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>